--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "autoprefixer": "^9.7.6",
+    "gulp-postcss": "^8.0.0",
     "rxjs": "~6.4.0",
+    "swiper": "^5.3.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
