--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~8.2.4",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
@@ -20,8 +21,12 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "autoprefixer": "^9.7.6",
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "gulp-postcss": "^8.0.0",
+    "jquery": "^3.5.0",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "swiper": "^5.3.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
